--- a/src/components/tokensList/TokenList.module.css
+++ b/src/components/tokensList/TokenList.module.css
@@ -1,31 +1,34 @@
-.container {
+.labelSearch {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
-  width: 400px;
+  margin-bottom: 20px;
 }
 
-.logo {
-  margin-right: 10px;
+.inputSearch {
+  min-width: 250px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 .text {
   font-size: 16px;
   line-height: 1.5;
+  text-align: center;
+  margin-bottom: 24px;
 }
 
-.btnAdd {
+.btnSearch {
   background-color: #3498db;
   color: #fff;
   border: none;
-  padding: 5px 10px;
+  padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin-bottom: 24px;
 }
 
-.btnAdd:hover {
+.btnSearch:hover {
   background-color: #2589c3;
 }
